apps/homelab/ghostfolio/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ghostfolio
  namespace: ghostfolio
spec:
  parentRefs:
    - name: gateway-internal
      namespace: envoy-gateway-system
  hostnames:
    - folio.urosevicvuk.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ghostfolio
          port: 3333
